; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_csputils.c_avcol_pri_to_mp_csp_prim.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_csputils.c_avcol_pri_to_mp_csp_prim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MP_CSP_PRIM_BT_601_525 = common dso_local global i32 0, align 4
@MP_CSP_PRIM_BT_601_625 = common dso_local global i32 0, align 4
@MP_CSP_PRIM_BT_709 = common dso_local global i32 0, align 4
@MP_CSP_PRIM_BT_2020 = common dso_local global i32 0, align 4
@MP_CSP_PRIM_BT_470M = common dso_local global i32 0, align 4
@MP_CSP_PRIM_AUTO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @avcol_pri_to_mp_csp_prim(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %15 [
    i32 128, label %5
    i32 129, label %5
    i32 132, label %7
    i32 130, label %9
    i32 133, label %11
    i32 131, label %13
  ]

5:                                                ; preds = %1, %1
  %6 = load i32, i32* @MP_CSP_PRIM_BT_601_525, align 4
  store i32 %6, i32* %2, align 4
  br label %17

7:                                                ; preds = %1
  %8 = load i32, i32* @MP_CSP_PRIM_BT_601_625, align 4
  store i32 %8, i32* %2, align 4
  br label %17

9:                                                ; preds = %1
  %10 = load i32, i32* @MP_CSP_PRIM_BT_709, align 4
  store i32 %10, i32* %2, align 4
  br label %17

11:                                               ; preds = %1
  %12 = load i32, i32* @MP_CSP_PRIM_BT_2020, align 4
  store i32 %12, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  %14 = load i32, i32* @MP_CSP_PRIM_BT_470M, align 4
  store i32 %14, i32* %2, align 4
  br label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @MP_CSP_PRIM_AUTO, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %13, %11, %9, %7, %5
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
